static/css/community.css
.community-grid {
    display: flex;
    flex-wrap:wrap;
    text-align: center;
    align-items: center;
    justify-content: center;
}

.tags-grid {
    display: flex;
    flex-wrap:wrap;
    text-align: center;
    align-items: center;
    justify-content: center;
    gap: 10px;
    margin: 10px 0;
}

.mod-image {
    width:80%;
    border: 4px solid white;
    height: auto;
}

.mod-title {
    align-items: center;
    justify-content: center;
    text-align: center;
    border-radius: 10px 10px 0 0;
    padding-top: 10px;
    margin-bottom: 10px;
    height: 15%;
    display:flex;
    font-size: 18px;
    font-weight: bolder;
    width:100%;
    position:relative;
}

.trophy-holder {
  height:32px;
  width:32px;
  position: absolute;
  right:8px;
  bottom:8px;
}

.mod-trophy {
  position: absolute;
  right:0px;
  bottom:0px;
  transition: transform .2s; /* Animation */
}

.mod-trophy:hover {
  position: relative;
  transform: scale(1.1); /* (150% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
}

.mod-title p {
  padding:10px;
}

.mod-desc {
    flex: 1;
  height: 100%;
  overflow-y: auto;
    text-align: center;
    font-size: 12px;
    width: 90%;
    margin: 5px auto;
    border-radius: 5px;
    padding: 5px;
}

.tag-button {
    padding: 10px;
    font-weight: bold;
    background-color : #BFE6FF;
    margin : 5px 5px 10px 10px;
    border-radius: 10px;
}

.tag-button:hover {
    background-color : #aacee2;
  }

.community-grid-element {
    width: 23%;
    height: 25rem;
    background-color : #BFE6FF;
    margin : 5px 5px 10px 10px;
    border-radius: 10px;
    display: flex;
    flex-direction : column;
    align-items: center;
    justify-content: center;
}

.hover-button-holder {
  display: inline-flex;
  justify-content: center;
  flex-wrap: wrap;
  width: 100%;
  margin: 10px;
  height: 12%;
}

.hover-button {
  font-size:x-large;
  font-weight:bolder;
  flex-grow: 1;
  display: inline-block;
  cursor: pointer;
  text-align: center;
  text-decoration: none;
  outline: none;
  color: #fff;
  background-color: rgb(85, 111, 176);
  border: none;
  border-radius: 10px;
  margin: 5px;
}

.hover-button:hover {background-color: rgb(76, 98, 154);}

.hover-button:active {
  background-color: rgb(85, 111, 176);
  box-shadow: 0 5px #666;
  transform: translateY(4px);
}

  /* Style the tab */
.tab {
  overflow: hidden;
  border: 1px solid #ccc;
  background-color: #f1f1f1;
}

/* Style the buttons that are used to open the tab content */
.tab button {
  background-color: inherit;
  float: left;
  border: none;
  outline: none;
  cursor: pointer;
  padding: 14px 16px;
  transition: 0.3s;
  font-weight: bold;
}

/* Change background color of buttons on hover */
.tab button:hover {
  background-color: #ddd;
}

/* Create an active/current tablink class */
.tab button.active {
  background-color: #ccc;
}

/* Style the tab content */
.tabcontent {
  display: none;
  padding: 6px 12px;
  border: 1px solid #ccc;
  border-top: none;
}

#achwindow {
  position: absolute;
  z-index: 9;
  background-color: #f1f1f1;
  border: 1px solid #d3d3d3;
  text-align: center;
  width: 50%;
  height: auto;
  max-height: 50vh;
  overflow: hidden;
  padding-bottom: 5%;
}

#achwindowheader {
  position: relative;
  padding: 10px;
  cursor: move;
  z-index: 10;
  background-color: #2196F3;
  color: #fff;
  font-weight: bold;
  font-size: large;
}

#achcontent {
  width: 100%;
  height: auto;
  overflow-y: scroll;
  display: flex;
  flex-wrap:wrap;
  align-items: center;
  justify-content: center;
  max-height: 50vh;
}

#achclose {
  position: absolute;
  top: 5px;
  bottom: 5px;
  left: 5px;
}

.achHolder {
  outline: #3d3b46;
  outline-width: 2px;
  outline-style: solid;
  margin-top: 32px;
  margin-bottom: 16px;
  width: 90%;
  display: flex;
  flex-direction: column;
}

.achSubHolder {
  transition: max-height 0.3s ease-out;
}

.achSubHolder {
  display: inline-flex;
  justify-content: center;
  flex-wrap: wrap;
}

.achLabel {
  display:flex;
  justify-content: center;
  padding-left: 5%;
  padding-right: 5%;
  margin-top: 0px;
  font-size: xx-large;
  font-weight: bolder;
  background-color: #BFE6FF;
  position: relative;
  cursor: pointer;
  user-select: none;
}

.achBox {
  transition: all 0.2s ease-out;
  height: 250px;
  max-height: 250px;
  max-width: 150px;
  margin: 5%;
  display:flex;
  outline-color: #3d3b46;
  outline-style: auto;
  justify-content: center;
  text-align: center;
  justify-items: center;
  flex-wrap:wrap;
  background-color: #BFE6FF;
  border-radius: 5px;
  padding:16px;
  padding-bottom:32px;
}

.achImageHolder {
  margin: 10%;
  object-fit: cover;
  outline-color: white;
  outline-style: auto;
  outline-width: 10px;
  position: relative;
}

.achToggle {
  user-select: none;
  position: absolute;
  top: 0;
  left: 0;
  width: 32px;
  height: 32px;
  cursor: pointer;
  opacity: 80%;
}

.achImage {
  object-fit: cover;
  width: 100%;
  height: 100%;
}

.achTitle {
  width: 100%;
  height:auto;
  max-height: 25%;
  font-size: 16pt;
  font-weight: bolder;
  margin: 5%;
  text-align: center;
  justify-content: center;
  word-wrap: break-word;
}

.achText {
  overflow-y: auto;
  overflow-x:hidden;
  height: 10%;
  font-size: 12px;
  border-radius: 5px;
  padding: 5px;
}

.locked {
  -webkit-filter: grayscale(100%); /* Safari 6.0 - 9.0 */
  filter: grayscale(100%);
}

#benefitwindow {
  position: absolute;
  z-index: 9;
  background-color: #f1f1f1;
  border: 1px solid #d3d3d3;
  text-align: center;
  width: 25%;
  height: 90vh;
}

#benefitwindowheader {
  position: relative;
  padding: 10px;
  cursor: move;
  z-index: 10;
  background-color: #2196F3;
  color: #fff;
  font-weight: bold;
  font-size: large;
}

#benefitcontent {
  margin: 10px;
  height: 90%;
  overflow-y: scroll;
  justify-items: top;
}

#benefitclose {
  position: absolute;
  top: 5px;
  bottom: 5px;
  left: 5px;
}

.cheatIndicator {
  position:sticky;
  top:0;
  padding:10px;
  font-size: large;
  font-weight: bold;
  z-index:999
}

.mode-button {
  font-size:medium;
  font-weight:bolder;
  flex-grow: 1;
  display: inline-block;
  cursor: pointer;
  text-align: center;
  text-decoration: none;
  outline: none;
  color: #ffffff;
  background-color: rgb(85, 111, 176);
  border: none;
  border-radius: 10px;
  margin: 5px;
  padding: 10px 10px;
}

.mode-button:hover {background-color: rgb(76, 98, 154);}

.mode-button:active {
  background-color: rgb(53, 70, 113);
}

.pressed {
  background-color: rgb(53, 70, 113)!important;
}

/* Tooltip container */
.tooltip {
  position: relative;
  display: inline-block;
  border-bottom: 1px dotted black; /* If you want dots under the hoverable text */
}

/* Tooltip text */
.tooltip .tooltiptext, .trophy-holder .tooltiptext {
  visibility: hidden;
  width: 120px;
  background-color: rgb(255, 255, 255);
  color: #fff;
  outline-color: black;
  outline-width: 1px;
  outline-style: solid;
  color:black;
  text-align: center;
  padding: 5px 0;
  border-radius: 6px;
  padding: 3px;
 
  /* Position the tooltip text - see examples below! */
  position: absolute;
  z-index: 1;
}

/* Show the tooltip text when you mouse over the tooltip container */
.tooltip:hover .tooltiptext {
  visibility: visible;
}

.trophy-holder:hover .tooltiptext, .trophy-holder:active .tooltiptext{
  visibility: visible;
  font-size: small;
}

.tooltip .tooltiptext {
  top: -5px;
  right: 105%;
}

.trophy-holder .tooltiptext {
  bottom: 48px;
  left: -150%;
  padding: 10px;
}

.rating-background {
  background-color: rgb(85, 111, 176);
  width: 100%;
  border-radius: 0px 0px 10px 10px;
  color:white;
  padding-top: 10px;
  position: relative;
  padding-bottom: 5px;
}

.rating-holder {
  display:flex; gap: 5px; margin:5px;
  justify-content: center;
}

.rate-button {
  overflow:hidden;
  background-size: cover;
  outline-style: solid;
  outline-width: 3px;
  outline-color: white;
  width: 32px;
  height: 32px;
  margin: 2px;
}

.rate-button:active {
  transform: translateY(1px);
}

.rate-button.pressed {
  filter: brightness(40%);
}

